# esp-nmda

./: .gitignore  ANALYSIS_ADC_PROTOCOL.md  CMakeLists.txt  FIX_FLASH_SIZE.md  README.md  README_DEPLOY.md  README_FLASH_SIZE.md  check_flash_size.sh  deploy_remote.sh  fix_bootloader_header.py  monitor_remote.sh  nmda.hivemq.example.ini  nmda.sample.ini  rebuild_fix_flash.sh  sdkconfig.defaults  sdkconfig.defaults.8mb  switch_flash_size.sh
docs/: FLASH_SETTINGS.md  MANUAL_FLASH_TEST.md  MQTT_TOPICS_SCHEMA.md  NVS_CONFIGURATION.md  PBURST_DOCUMENTATION.md  README_FLASH_SIZE.md  README_SPL06.md  log_desarrollo.md
documents/: ANALYSIS_SPL06.md  log_desarrollo.md
main/: CMakeLists.txt  Kconfig.projbuild  hv_adc.c  hv_adc_monitor_task.c  i2c_bus.c  idf_component.yml  main.c  meteo.c  meteo_bmp280.c  mqtt.c  mss_sender.c  ota.c  pulse_detection.c  pulse_monitor.c  rmt_pulse_capture.c  sdcard.c  settings.c  sntp.c  spl06.c  spl06_monitor_task.c  user_led.c  wifi.c
main/include/: common.h  datastructures.h  esp32-libs.h  hv_adc.h  i2c_bus.h  meteo_bmp280.h  mqtt.h  pulse_coincidence.h  pulse_monitor.h  rmt_pulse_capture.h  sdcard.h  settings.h  sntp.h  spl06.h  user_led.h  wifi.h
partitions/: Makefile  README_NVS.md  partitions.csv  partitions_4mb.csv  settings.csv  settings.op64hive.csv  settings.sample.csv
